// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataWranglingScript: Component should render correctly 1`] = `
<LoadingWrapper
  error={null}
  loading={false}
  noData={false}
  noDataContent={null}
>
  <DataWranglingDefaultScript
    customScripts={Array []}
    dataWranglingScript={
      Object {
        "body": "
      import pandas as pd
  
      df = pd.DataFrame({'Place': ['newyork', 'Washington', 'Newyork', 'WASHIngton'],
                         'var1': ['XSD', 'wer', 'xyz', 'zyx']})
      # Uppercase
      df = df['var1'].str.upper()
      # lowercase
      df = df['var1'].str.lower()
      # Title case
      df = df['var1'].str.title()
      # Sentence Case
      df = df['var1'].str.capitalize()
    ",
        "datasource": 2,
        "id": 4,
        "isPredefined": false,
        "name": "local:case_conversion.py",
        "specs": Object {},
      }
    }
    fetchDataSource={[Function]}
    fetchDataWranglingScript={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "scriptId": "1",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      }
    }
    fieldNames={Array []}
    history={
      Object {
        "push": [Function],
      }
    }
    imageScrapingFields={Array []}
    intl={Object {}}
    isAdmin={false}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "scriptId": "1",
        },
        "path": "/",
      }
    }
    setImageScrapingFields={[Function]}
  />
</LoadingWrapper>
`;

exports[`DataWranglingScript: Component should render correctly with link to datasources 1`] = `
<LoadingWrapper
  error={null}
  loading={false}
  noData={false}
  noDataContent={null}
>
  <DataWranglingDefaultScript
    customScripts={Array []}
    dataWranglingScript={
      Object {
        "body": "
      import pandas as pd
  
      df = pd.DataFrame({'Place': ['newyork', 'Washington', 'Newyork', 'WASHIngton'],
                         'var1': ['XSD', 'wer', 'xyz', 'zyx']})
      # Uppercase
      df = df['var1'].str.upper()
      # lowercase
      df = df['var1'].str.lower()
      # Title case
      df = df['var1'].str.title()
      # Sentence Case
      df = df['var1'].str.capitalize()
    ",
        "datasource": 2,
        "id": 4,
        "isPredefined": false,
        "name": "local:case_conversion.py",
        "specs": Object {},
      }
    }
    fetchDataSource={[Function]}
    fetchDataWranglingScript={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "scriptId": "1",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      }
    }
    fieldNames={Array []}
    history={
      Object {
        "push": [Function],
      }
    }
    imageScrapingFields={Array []}
    intl={Object {}}
    isAdmin={false}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "scriptId": "1",
        },
        "path": "/",
      }
    }
    setImageScrapingFields={[Function]}
  />
</LoadingWrapper>
`;

exports[`DataWranglingScript: Component should render correctly with loader 1`] = `
<LoadingWrapper
  error={null}
  loading={true}
  noData={false}
  noDataContent={null}
>
  <DataWranglingDefaultScript
    customScripts={Array []}
    dataWranglingScript={
      Object {
        "body": "
      import pandas as pd
  
      df = pd.DataFrame({'Place': ['newyork', 'Washington', 'Newyork', 'WASHIngton'],
                         'var1': ['XSD', 'wer', 'xyz', 'zyx']})
      # Uppercase
      df = df['var1'].str.upper()
      # lowercase
      df = df['var1'].str.lower()
      # Title case
      df = df['var1'].str.title()
      # Sentence Case
      df = df['var1'].str.capitalize()
    ",
        "datasource": 2,
        "id": 4,
        "isPredefined": false,
        "name": "local:case_conversion.py",
        "specs": Object {},
      }
    }
    fetchDataSource={[Function]}
    fetchDataWranglingScript={[Function]}
    fieldNames={Array []}
    history={
      Object {
        "push": [Function],
      }
    }
    imageScrapingFields={Array []}
    intl={Object {}}
    isAdmin={false}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "scriptId": "1",
        },
        "path": "/",
      }
    }
    setImageScrapingFields={[Function]}
  />
</LoadingWrapper>
`;

exports[`DataWranglingScript: Component should render correctly with route to custom script 1`] = `
<LoadingWrapper
  error={null}
  loading={false}
  noData={false}
  noDataContent={null}
>
  <ImageScrapingScript
    customScripts={Array []}
    dataWranglingScript={
      Object {
        "body": "
      import pandas as pd
  
      df = pd.DataFrame({'Place': ['newyork', 'Washington', 'Newyork', 'WASHIngton'],
                         'var1': ['XSD', 'wer', 'xyz', 'zyx']})
      # Uppercase
      df = df['var1'].str.upper()
      # lowercase
      df = df['var1'].str.lower()
      # Title case
      df = df['var1'].str.title()
      # Sentence Case
      df = df['var1'].str.capitalize()
    ",
        "datasource": 2,
        "id": 4,
        "isPredefined": false,
        "name": "local:case_conversion.py",
        "specs": Object {
          "type": "image_scraping",
        },
      }
    }
    fetchDataSource={[Function]}
    fetchDataWranglingScript={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "scriptId": "1",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      }
    }
    fieldNames={Array []}
    history={
      Object {
        "push": [Function],
      }
    }
    imageScrapingFields={Array []}
    intl={Object {}}
    isAdmin={false}
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
          "scriptId": "1",
        },
        "path": "/",
      }
    }
    setImageScrapingFields={[Function]}
  />
</LoadingWrapper>
`;
